# Natural-Language-to-SQL-Chatbot

./: README.md  chroma.sqlite3  main.py  test.ipynb
config/: database.py
new/: pyproject.toml  test.ipynb
new/config/: log_config.py  settings.py
new/logs/: logger.py
new/schema/: chat_schemas.py
routes/: chat_routes.py
utills/: chat_history.py  few_shot.py  vanna_extension.py
