[project]
name = "chatbot-over-structured-data"
version = "0.1.0"
description = "This chatbot is being developed to answer over structured data like databases."
authors = [
    {name = "Aniket-Singh",email = "aniket.singh@netsmartz.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain-openai (>=0.3.8,<0.4.0)",
    "langgraph (>=0.3.8,<0.4.0)",
    "langchain-groq (>=0.2.5,<0.3.0)",
    "langchain-ibm (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "ibm-watson (>=9.0.0,<10.0.0)",
    "ibm-watsonx-ai (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
